Details
-
Bug
-
Resolution: Fixed
-
P4: Low
-
Qt Creator 3.6.0
-
None
-
0338f6909c5ca5f265018304b15227530ba787e0
Description
If uncrustify is called on an objective-c++ file (xxx.mm) with string literals like
[tf setStringValue:@"XXX123XXX"];
I get the message "Error in Beautifier: /opt/local/bin/uncrustify: stdin:115 Garbage in col 21: 40"
If uncrustify is called on the file via shell and the same configuration everything is fine.