Beautifier: Use Uncrustify's new --assume option

Instead of treating all files as C++ with version 0.62 we can use
Uncrustify's new option --assume. It decides which language the file is.
Thus using Uncrustify inside the Beautifier behaves like calling it on
the command line.

Task-number: QTCREATORBUG-15575
Change-Id: I8cd2250194b4acb81a9062f99c5ce5ea6083bd5a
Reviewed-by: David Schulz <david.schulz@theqtcompany.com>